Tests: Ignore existing watches index in REST test
This test should ensure, that a missing watch on an existing index
causes an error, thus it can ignore if the .watches index already
exists.

relates elastic/x-pack-elasticsearch#1155

Original commit: elastic/x-pack-elasticsearch@89c56cb2be5eaf4f0c4cb1b0ebff87c63a0ad83b

--- a/plugin/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yaml
@@ -4,9 +4,12 @@
       cluster.health:
           wait_for_status: yellow
 
+  # ensure index exists, but ignore if it does already
+  # this test should ensure the watch is missing, while the index is there
   - do:
       indices.create:
         index: .watches
+      ignore: 400
 
   - do:
       catch: missing
