--- a/plugin/src/test/resources/rest-api-spec/test/ml/update_model_snapshot.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/update_model_snapshot.yaml
@@ -17,7 +17,7 @@ setup:
       index:
         index:  .ml-anomalies-update-model-snapshot
         type:   model_snapshot
-        id:     "1"
+        id:     "update-model-snapshot-snapshot-1"
         body: >
           {
             "job_id" : "update-model-snapshot",
@@ -30,7 +30,7 @@ setup:
       index:
         index:  .ml-anomalies-update-model-snapshot
         type:   model_snapshot
-        id:     "2"
+        id:     "update-model-snapshot-snapshot-2"
         body: >
           {
             "job_id": "update-model-snapshot",
@@ -49,10 +49,10 @@ setup:
   - do:
       xpack.ml.get_model_snapshots:
         job_id: "update-model-snapshot"
-        description: "new_description"
+        snapshot_id: "snapshot-1"
 
-  - match: { count: 0 }
-  - length: { model_snapshots: 0 }
+  - match: { count: 1 }
+  - is_false: model_snapshots.0.description
 
   - do:
       xpack.ml.update_model_snapshot:
@@ -74,34 +74,36 @@ setup:
   - do:
       xpack.ml.get_model_snapshots:
         job_id: "update-model-snapshot"
-        description: "new_description"
+        snapshot_id: "snapshot-1"
 
   - match: { count: 1 }
   - match: { model_snapshots.0.snapshot_id: "snapshot-1" }
   - match: { model_snapshots.0.timestamp: 1464825600000 }
 
 ---
-"Test with conflict against existing description":
+"Test duplicate descriptions are allowed":
   - do:
-      xpack.ml.get_model_snapshots:
-        job_id: "update-model-snapshot"
-        description: "2"
-
-  - match: { count: 1 }
-  - length: { model_snapshots: 1 }
-  - match: { model_snapshots.0.job_id: "update-model-snapshot" }
-  - match: { model_snapshots.0.description: "snapshot 2 description" }
-
-  - do:
-      catch: request
       xpack.ml.update_model_snapshot:
         job_id: "update-model-snapshot"
         snapshot_id: "snapshot-1"
         body: >
           {
-            "description": "snapshot"
+            "description": "snapshot 2 description"
           }
 
+  - do:
+      indices.refresh:
+        index: .ml-anomalies-update-model-snapshot
+
+  - do:
+      xpack.ml.get_model_snapshots:
+        job_id: "update-model-snapshot"
+
+  - match: { count: 2 }
+  - match: { model_snapshots.0.snapshot_id: "snapshot-1" }
+  - match: { model_snapshots.0.description: "snapshot 2 description" }
+  - match: { model_snapshots.1.snapshot_id: "snapshot-2" }
+  - match: { model_snapshots.1.description: "snapshot 2 description" }
 ---
 "Test with retain":
   - do:
@@ -156,4 +158,16 @@ setup:
           {
             "description": "new foo",
             "retain": true
+          }
+
+---
+"Test with unknown snapshot id":
+  - do:
+      catch: missing
+      xpack.ml.update_model_snapshot:
+        job_id: "update-model-snapshot"
+        snapshot_id: "snapshot-9999"
+        body: >
+          {
+            "description": "new description for snapshot 9999"
           }
