Watcher: Replace _status field with status (elastic/x-pack-elasticsearch#1285)
As fields with underscores will be disallowed in master, and we have to
prepare the upgrade, this commit renames the _status field to status.

When the 5.x upgrade logic is in place in the 5.x we can remove all the
old style _status handling from the master branch.

Note: All the BWC compatibility tests, that load 5.x indices are now
faking a finished upgrade by adding the `status` field to the mapping
of the watches index.

Original commit: elastic/x-pack-elasticsearch@9d5cc9aaec3c5737dee0e3ac53c778102f3eaf7d

--- a/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/30_reset_ack_after_unmet_condition.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/30_reset_ack_after_unmet_condition.yaml
@@ -53,17 +53,17 @@ teardown:
           {
             "record_execution" : true
           }
-  - match: { watch_record._status.actions.indexme.ack.state: "ackable" }
+  - match: { watch_record.status.actions.indexme.ack.state: "ackable" }
 
   - do:
       xpack.watcher.ack_watch:
         watch_id: "my_watch"
-  - match: { "_status.actions.indexme.ack.state" : "acked" }
+  - match: { "status.actions.indexme.ack.state" : "acked" }
 
   - do:
       xpack.watcher.get_watch:
         id: "my_watch"
-  - match: { "_status.actions.indexme.ack.state" : "acked" }
+  - match: { "status.actions.indexme.ack.state" : "acked" }
 
   # having a false result will reset the ack state
   - do:
@@ -79,12 +79,12 @@ teardown:
               "indexme" : "force_execute"
             }
           }
-  - match: { watch_record._status.actions.indexme.ack.state: "awaits_successful_execution" }
+  - match: { watch_record.status.actions.indexme.ack.state: "awaits_successful_execution" }
 
   - do:
       xpack.watcher.get_watch:
         id: "my_watch"
-  - match: { "_status.actions.indexme.ack.state" : "awaits_successful_execution" }
+  - match: { "status.actions.indexme.ack.state" : "awaits_successful_execution" }
 
   - do:
       xpack.watcher.execute_watch:
@@ -96,10 +96,10 @@ teardown:
               "indexme" : "force_execute"
             }
           }
-  - match: { watch_record._status.actions.indexme.ack.state: "ackable" }
+  - match: { watch_record.status.actions.indexme.ack.state: "ackable" }
 
   - do:
       xpack.watcher.get_watch:
         id: "my_watch"
-  - match: { "_status.actions.indexme.ack.state" : "ackable" }
+  - match: { "status.actions.indexme.ack.state" : "ackable" }
 
