--- a/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/10_basic.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/10_basic.yaml
@@ -43,14 +43,14 @@
       xpack.watcher.ack_watch:
         watch_id: "my_watch"
 
-  - match: { "_status.actions.test_index.ack.state" : "awaits_successful_execution" }
+  - match: { "status.actions.test_index.ack.state" : "awaits_successful_execution" }
 
   - do:
       search:
         index: .watches
         body: { "query": { "term": { "_id": "my_watch" } } }
   - match: { hits.total: 1 }
-  - match: { hits.hits.0._source._status.actions.test_index.ack.state: "awaits_successful_execution" }
+  - match: { hits.hits.0._source.status.actions.test_index.ack.state: "awaits_successful_execution" }
 
   - do:
       xpack.watcher.delete_watch:
