--- a/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/20_ack_individual_action.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/ack_watch/20_ack_individual_action.yaml
@@ -44,7 +44,7 @@
         watch_id: "my_watch"
         action_id: "test_index"
 
-  - match: { "_status.actions.test_index.ack.state" : "awaits_successful_execution" }
+  - match: { "status.actions.test_index.ack.state" : "awaits_successful_execution" }
 
   - do:
       xpack.watcher.delete_watch:
