--- a/plugin/src/test/resources/rest-api-spec/test/watcher/execute_watch/10_basic.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/execute_watch/10_basic.yaml
@@ -58,9 +58,9 @@ teardown:
   - match: { watch_record.trigger_event.triggered_time: "2012-12-12T12:12:12.120Z" }
   - match: { watch_record.trigger_event.manual.schedule.scheduled_time: "2000-12-12T12:12:12.120Z" }
   - match: { watch_record.state: "executed" }
-  - match: { watch_record._status.state.active: true }
+  - match: { watch_record.status.state.active: true }
   - is_true: watch_record.node
-  - match: { watch_record._status.actions.indexme.ack.state: "ackable" }
+  - match: { watch_record.status.actions.indexme.ack.state: "ackable" }
 
 ---
 "Test execute watch API with user supplied watch":
@@ -96,8 +96,8 @@ teardown:
   - match: { watch_record.watch_id: "_inlined_" }
   - match: { watch_record.trigger_event.type: "manual" }
   - match: { watch_record.state: "executed" }
-  - match: { watch_record._status.state.active: true }
-  - match: { watch_record._status.actions.indexme.ack.state: "ackable" }
+  - match: { watch_record.status.state.active: true }
+  - match: { watch_record.status.actions.indexme.ack.state: "ackable" }
 
 ---
 "Execute unknown watch results in 404":
