--- a/plugin/src/test/resources/rest-api-spec/test/watcher/put_watch/40_put_watch_as_inactive.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/put_watch/40_put_watch_as_inactive.yaml
@@ -54,4 +54,4 @@ teardown:
 
   - match: { found : true }
   - match: { _id: "my_watch" }
-  - match: { _status.state.active: false }
+  - match: { status.state.active: false }
