--- a/qa/multi-cluster-search-security/src/test/resources/rest-api-spec/test/remote_cluster/10_basic.yaml
+++ b/qa/multi-cluster-search-security/src/test/resources/rest-api-spec/test/remote_cluster/10_basic.yaml
@@ -22,7 +22,7 @@ setup:
               "cluster": ["monitor"],
               "indices": [
                 {
-                  "names": ["test_index", "aliased_test_index", "field_caps_index_1", "field_caps_index_3"],
+                  "names": ["secure_alias", "test_index", "aliased_test_index", "field_caps_index_1", "field_caps_index_3"],
                   "privileges": ["read", "read_cross_cluster"]
                 }
               ]
@@ -91,6 +91,16 @@ setup:
               filter:
                 term:
                   filter_field : 1
+  - do:
+      indices.create:
+        index: secured_via_alias
+        body:
+          settings:
+            index:
+              number_of_shards: 2
+              number_of_replicas: 0
+          aliases:
+            secure_alias: {} # we use this alias in the multi cluster test to verify permissions via aliases work
 
   - do:
       bulk:
@@ -108,6 +118,9 @@ setup:
            - '{"f1": "remote_cluster", "filter_field": 0}'
            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
            - '{"f1": "remote_cluster", "filter_field": 0}'
+           - '{"index": {"_index": "secured_via_alias", "_type": "test_type"}}'
+           - '{"f1": "remote_cluster", "secure": true}'
+
 
   - do:
       headers: { Authorization: "Basic am9lOnMza3JpdA==" }
@@ -134,6 +147,17 @@ setup:
   - match: { hits.total: 2 }
   - match: { hits.hits.0._source.filter_field: 1 }
   - match: { hits.hits.0._index: "test_index" }
+
+# search the index via a alias permission
+  - do:
+      headers: { Authorization: "Basic am9lOnMza3JpdA==" }
+      search:
+        index: secure_alias
+
+  - match: { _shards.total: 2 }
+  - match: { hits.total: 1 }
+  - is_true: hits.hits.0._source.secure
+  - match: { hits.hits.0._index: "secured_via_alias" }
 
 # The user is updated to remove its role mappings to show that we do not
 #  need the user to be assigned to a role on the remote cluster and that the
