[Monitoring] Stop Accepting .monitoring-data-N index requests via REST (elastic/x-pack-elasticsearch#1318)
Now that the Monitoring UI no longer checks the `.monitoring-data-2` index
for Kibana, Logstash, or Beats data, we can stop accepting the duplicated
data in that index (the _exact_ same documents are also indexed into the
time-based index for each product).

This ignores rather than rejects requests that contain such documents to
allow older clients to communicate with a 5.5+ monitoring cluster.

Original commit: elastic/x-pack-elasticsearch@def472cf2eca81653d4ee7f063c20b7a68db0468

--- a/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/10_basic.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/10_basic.yaml
@@ -71,12 +71,13 @@
 
   - match: { hits.total: 1 }
 
+  # We actively ignore indexing requests made to .monitoring-data-N starting with 5.5
   - do:
       search:
         index: .monitoring-data-*
         type:  kibana
 
-  - match: { hits.total: 1 }
+  - match: { hits.total: 0 }
 
   # Missing a system_id causes it to fail
   - do:
