--- a/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/20_privileges.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/20_privileges.yaml
@@ -107,11 +107,12 @@ teardown:
         type:  logstash_metric
   - match: { hits.total: 1 }
 
+  # We actively ignore indexing requests made to .monitoring-data-N starting with 5.5
   - do:
       search:
         index: .monitoring-data-*
         type:  logstash_info
-  - match: { hits.total: 1 }
+  - match: { hits.total: 0 }
 
   - do:
       catch: forbidden
