[ML] Not an error to close a job twice (elastic/x-pack-elasticsearch#1340)
* [ML] Not an error to close a job twice

* Error if job is opening

* Address review comments

* Test closed job isn’t resolved

Original commit: elastic/x-pack-elasticsearch@7da7b24c086be4e17c94155dfb7ae5947d272d44

--- a/qa/smoke-test-ml-with-security/build.gradle
+++ b/qa/smoke-test-ml-with-security/build.gradle
@@ -39,7 +39,7 @@ integTestRunner {
     'ml/jobs_get_result_categories/Test with invalid param combinations via body',
     'ml/jobs_get_stats/Test get job stats given missing job',
     'ml/post_data/Test Flush data with invalid parameters',
-    'ml/post_data/Test flushing, posting and closing a closed job',
+    'ml/post_data/Test flushing and posting a closed job',
     'ml/post_data/Test open and close with non-existent job id',
     'ml/post_data/Test POST data with invalid parameters',
     'ml/preview_datafeed/Test preview missing datafeed',
