--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yaml
@@ -382,6 +382,84 @@
       metadata.persistent_tasks.tasks: []
 
 ---
+"Test closing a closed job isn't an error":
+  - do:
+      xpack.ml.put_job:
+        job_id: jobs-crud-close-a-closed-job
+        body:  >
+          {
+            "description":"Analysis of response time by airline",
+            "analysis_config" : {
+                "detectors" :[{"function":"count"}]
+            },
+            "data_description" : {
+                "format":"xcontent"
+            }
+          }
+  - match: { job_id: "jobs-crud-close-a-closed-job" }
+
+  - do:
+      xpack.ml.open_job:
+        job_id: jobs-crud-close-a-closed-job
+
+  - do:
+      xpack.ml.close_job:
+        job_id: jobs-crud-close-a-closed-job
+  - match: { closed: true }
+
+  - do:
+      xpack.ml.close_job:
+        job_id: jobs-crud-close-a-closed-job
+  - match: { closed: true }
+
+---
+"Test close all jobs":
+  - do:
+      xpack.ml.put_job:
+        job_id: jobs-crud-close-all-1
+        body:  >
+          {
+            "description":"Analysis of response time by airline",
+            "analysis_config" : {
+                "detectors" :[{"function":"count"}]
+            },
+            "data_description" : {
+                "format":"xcontent"
+            }
+          }
+  - match: { job_id: "jobs-crud-close-all-1" }
+
+  - do:
+      xpack.ml.put_job:
+        job_id: jobs-crud-close-all-2
+        body:  >
+          {
+            "description":"Analysis of response time by airline",
+            "analysis_config" : {
+                "detectors" :[{"function":"count"}]
+            },
+            "data_description" : {
+                "format":"xcontent"
+            }
+          }
+  - match: { job_id: "jobs-crud-close-all-2" }
+
+  - do:
+      xpack.ml.open_job:
+        job_id: jobs-crud-close-all-2
+
+  - do:
+      xpack.ml.close_job:
+        job_id: _all
+  - match: { closed: true }
+
+  - do:
+      xpack.ml.get_job_stats:
+        job_id: _all
+  - match: { jobs.0.state: closed }
+  - match: { jobs.1.state: closed }
+
+---
 "Test force close job":
 
   - do:
@@ -438,3 +516,36 @@
         filter_path: metadata.persistent_tasks
   - match:
       metadata.persistent_tasks.tasks: []
+
+---
+"Test force closing a closed job isn't an error":
+  - do:
+      xpack.ml.put_job:
+        job_id: jobs-crud-close-a-closed-job
+        body:  >
+          {
+            "description":"Analysis of response time by airline",
+            "analysis_config" : {
+                "detectors" :[{"function":"count"}]
+            },
+            "data_description" : {
+                "format":"xcontent"
+            }
+          }
+  - match: { job_id: "jobs-crud-close-a-closed-job" }
+
+  - do:
+      xpack.ml.open_job:
+        job_id: jobs-crud-close-a-closed-job
+
+  - do:
+      xpack.ml.close_job:
+        job_id: jobs-crud-close-a-closed-job
+        force: true
+  - match: { closed: true }
+
+  - do:
+      xpack.ml.close_job:
+        job_id: jobs-crud-close-a-closed-job
+        force: true
+  - match: { closed: true }
