--- a/plugin/src/test/resources/rest-api-spec/test/ml/post_data.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/post_data.yaml
@@ -196,16 +196,11 @@ setup:
         job_id: not_a_job
 
 ---
-"Test flushing, posting and closing a closed job":
+"Test flushing and posting a closed job":
 
   - do:
       catch: /status_exception/
       xpack.ml.flush_job:
-        job_id: post-data-closed-job
-
-  - do:
-      catch: /status_exception/
-      xpack.ml.close_job:
         job_id: post-data-closed-job
 
   - do:
