Watcher: Make watch history use doc type instead of watch_record (elastic/x-pack-elasticsearch#1311)
As this does not require any reindexing this is easy to fix by just
changing the watch history template.

In addition the old templates are deleted on start up and the new ones
are instantiated.

Original commit: elastic/x-pack-elasticsearch@7e1ad495adaf69345307c7e93cdbfd39e95c790e

--- a/qa/smoke-test-watcher/src/test/resources/rest-api-spec/test/actions/20_jira.yaml
+++ b/qa/smoke-test-watcher/src/test/resources/rest-api-spec/test/actions/20_jira.yaml
@@ -75,7 +75,7 @@
         index: ".watcher-history-*"
   - match: { hits.total: 1 }
 
-  - match: { hits.hits.0._type: "watch_record" }
+  - match: { hits.hits.0._type: "doc" }
   - match: { hits.hits.0._source.watch_id: "jira_watch" }
   - match: { hits.hits.0._source.state: "executed" }
 
@@ -195,7 +195,7 @@
 
   - match: { hits.total: 1 }
 
-  - match: { hits.hits.0._type: "watch_record" }
+  - match: { hits.hits.0._type: "doc" }
   - match: { hits.hits.0._source.watch_id: "wrong_jira_watch" }
   - match: { hits.hits.0._source.state: "executed" }
 
