--- a/plugin/src/test/resources/rest-api-spec/test/ml/custom_all_field.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/custom_all_field.yaml
@@ -7,7 +7,8 @@ setup:
             "description":"Job for testing custom all field",
             "analysis_config" : {
                 "detectors" :[{"function":"metric","field_name":"responsetime","by_field_name":"airline"}]
-            }
+            },
+            "data_description": {}
           }
   - do:
       xpack.ml.put_job:
@@ -17,7 +18,8 @@ setup:
             "description":"Job for testing custom all field",
             "analysis_config" : {
                 "detectors" :[{"function":"metric","field_name":"responsetime","by_field_name":"airline"}]
-            }
+            },
+            "data_description": {}
           }
 
 
