[Security] Cross cluster wildcard security (elastic/x-pack-elasticsearch#1290)
Support the resolution of remote index names, including those that contain wildcards in the cluster name or index part)

Specifically these work:
- `GET /remote*:foo/_search`
- `GET /*:foo/_search`
- `GET /*:foo,*/_search`
- `GET /remote:*/_search`
- `GET /*:*/_search`

This change assumes that every user is allowed to attempt a cross-cluster search against any remote index, and the actual authorisation of indices happens on the remote nodes. Thus ` GET /*:foo/_search` will expand to search the `foo` index on every registered remote without consideration of the roles and privileges that the user has on the source cluster.

Original commit: elastic/x-pack-elasticsearch@b45041aaa39e065be9f47e434e549e49e3a9c124

--- a/qa/multi-cluster-search-security/src/test/resources/rest-api-spec/test/multi_cluster/10_basic.yaml
+++ b/qa/multi-cluster-search-security/src/test/resources/rest-api-spec/test/multi_cluster/10_basic.yaml
@@ -22,7 +22,7 @@ setup:
               "cluster": ["all"],
               "indices": [
                 {
-                  "names": ["test_index", "my_remote_cluster:test_index", "my_remote_cluster:aliased_test_index", "test_remote_cluster:test_index", "my_remote_cluster:secure_alias"],
+                  "names": ["local_index", "my_remote_cluster:test_i*", "my_remote_cluster:aliased_test_index", "test_remote_cluster:test_i*", "my_remote_cluster:secure_alias"],
                   "privileges": ["read"]
                 }
               ]
@@ -42,7 +42,7 @@ teardown:
 
   - do:
       indices.create:
-        index: test_index
+        index: local_index
         body:
           settings:
             index:
@@ -53,21 +53,21 @@ teardown:
       bulk:
         refresh: true
         body:
-            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
+            - '{"index": {"_index": "local_index", "_type": "test_type"}}'
             - '{"f1": "local_cluster", "filter_field": 0}'
-            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
+            - '{"index": {"_index": "local_index", "_type": "test_type"}}'
             - '{"f1": "local_cluster", "filter_field": 1}'
-            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
+            - '{"index": {"_index": "local_index", "_type": "test_type"}}'
             - '{"f1": "local_cluster", "filter_field": 0}'
-            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
+            - '{"index": {"_index": "local_index", "_type": "test_type"}}'
             - '{"f1": "local_cluster", "filter_field": 1}'
-            - '{"index": {"_index": "test_index", "_type": "test_type"}}'
+            - '{"index": {"_index": "local_index", "_type": "test_type"}}'
             - '{"f1": "local_cluster", "filter_field": 0}'
 
   - do:
       headers: { Authorization: "Basic am9lOnMza3JpdA==" }
       search:
-        index: test_index,my_remote_cluster:test_index
+        index: local_index,my_remote_cluster:test_index
         body:
           aggs:
             cluster:
@@ -85,7 +85,7 @@ teardown:
   - do:
       headers: { Authorization: "Basic am9lOnMza3JpdA==" }
       search:
-        index: test_index,my_remote_cluster:test_index
+        index: local_index,my_remote_cluster:test_index
         body:
           query:
             term:
@@ -119,10 +119,28 @@ teardown:
   - match: { aggregations.cluster.buckets.0.key: "remote_cluster" }
   - match: { aggregations.cluster.buckets.0.doc_count: 6 }
 
+  # Test wildcard in cluster name
   - do:
       headers: { Authorization: "Basic am9lOnMza3JpdA==" }
       search:
-        index: test_index
+        index: "my_*:test_index"
+        body:
+          aggs:
+            cluster:
+              terms:
+                field: f1.keyword
+
+  - match: { _shards.total: 3 }
+  - match: { hits.total: 6}
+  - match: { hits.hits.0._index: "my_remote_cluster:test_index"}
+  - length: { aggregations.cluster.buckets: 1 }
+  - match: { aggregations.cluster.buckets.0.key: "remote_cluster" }
+  - match: { aggregations.cluster.buckets.0.doc_count: 6 }
+
+  - do:
+      headers: { Authorization: "Basic am9lOnMza3JpdA==" }
+      search:
+        index: local_index
         body:
           aggs:
             cluster:
@@ -131,7 +149,7 @@ teardown:
 
   - match: { _shards.total: 2 }
   - match: { hits.total: 5}
-  - match: { hits.hits.0._index: "test_index"}
+  - match: { hits.hits.0._index: "local_index"}
   - length: { aggregations.cluster.buckets: 1 }
   - match: { aggregations.cluster.buckets.0.key: "local_cluster" }
   - match: { aggregations.cluster.buckets.0.doc_count: 5 }
@@ -161,6 +179,15 @@ teardown:
   - match: { _shards.total: 3 }
   - match: { hits.total: 6 }
   - match: { hits.hits.0._index: "test_remote_cluster:test_index" }
+
+  # Test wildcard that matches multiple (two) cluster names
+  - do:
+      headers: { Authorization: "Basic am9lOnMza3JpdA==" }
+      search:
+        index: "*_remote_cluster:test_ind*"
+
+  - match: { _shards.total: 6 }
+  - match: { hits.total: 12 }
 
 ---
 "Search an filtered alias on the remote cluster":
