--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -63,6 +63,7 @@ buildRestTests.expectedUnconvertedCandidates = [
         'en/watcher/troubleshooting.asciidoc',
         'en/ml/api-quickref.asciidoc',
         'en/rest-api/ml/close-job.asciidoc',
+        'en/rest-api/ml/datafeedresource.asciidoc',
         'en/rest-api/ml/delete-datafeed.asciidoc',
         'en/rest-api/ml/delete-snapshot.asciidoc',
         'en/rest-api/ml/flush-job.asciidoc',
