[Test] Converts LocalExporterTests.testLocalExporterFlush() as REST test (elastic/x-pack-elasticsearch#969)
The LocalExporterTests.testLocalExporterFlush() test was removed in elastic/x-pack-elasticsearch#835 when
LocalExporterTests was changed. This test verified that export exceptions are
thrown when monitoring documents are exported using the Monitoring Bulk API but
the underlying  monitoring indices are closed.

This commit reintroduces this test, but as a REST test this time.

relates elastic/x-pack-elasticsearch#416

Original commit: elastic/x-pack-elasticsearch@0a42f9a1be58d819aae3600f2cb9ccb14818440b

--- a/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/10_basic.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/monitoring/bulk/10_basic.yaml
@@ -111,3 +111,50 @@
         body:
           - '{"index": {}}'
           - '{"field_1": "value_1"}'
+
+---
+"Bulk indexing of monitoring data on closed indices should throw an export exception":
+
+  - do:
+      xpack.monitoring.bulk:
+        system_id:          "beats"
+        system_api_version: "2"
+        interval:           "5s"
+        body:
+          - index:
+              _type:  metric_beat
+          - modules:
+              nginx:  true
+              mysql:  false
+          - index:
+              _type:  file_beat
+          - file:
+              path:   /var/log/dmesg
+              size:   31kb
+
+  - is_false: errors
+
+  - do:
+      indices.refresh: {}
+
+  - do:
+      search:
+        index: .monitoring-beats-*
+  - match: { hits.total: 2 }
+
+  - do:
+      indices.close:
+        index: .monitoring-beats-*
+
+  - do:
+      catch: /export_exception/
+      xpack.monitoring.bulk:
+        system_id:          "beats"
+        system_api_version: "2"
+        interval:           "5s"
+        body:
+          - index:
+              _type:  file_beat
+          - file:
+              path:   /var/log/auth.log
+              size:   5kb
