Test: mute kibana_write rest test that never ran or worked
See elastic/x-pack-elasticsearch#1460

Original commit: elastic/x-pack-elasticsearch@505c8b8832449ea7092e59005a0620a666f2d3a4

--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -88,6 +88,7 @@ mixedClusterTestCluster {
 
 mixedClusterTestRunner {
     systemProperty 'tests.rest.suite', 'mixed_cluster'
+    systemProperty 'tests.rest.blacklist', 'mixed_cluster/30_kibana_write/*'
     finalizedBy 'oldClusterTestCluster#node0.stop'
 }
 
