Use new wireCompatVersions property instead of bwcVersion (elastic/x-pack-elasticsearch#1466)
This is the xpack side of elastic/elasticsearch#24748

Original commit: elastic/x-pack-elasticsearch@8b7dd5cdbef0af2facf901538ed9f2fd20816825

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,6 @@ subprojects {
   }
   ext.projectSubstitutions += [
      "org.elasticsearch.plugin:x-pack-api:${version}": ':x-pack-elasticsearch:plugin',
-     "org.elasticsearch.plugin:x-pack:${bwcVersion}": ':x-pack-elasticsearch:plugin:bwc-zip'
+     "org.elasticsearch.plugin:x-pack:${wireCompatVersions[-1]}": ':x-pack-elasticsearch:plugin:bwc-zip'
   ]
 }
