Remove file scripts (elastic/x-pack-elasticsearch#1399)
This is the xpack side of elastic/elasticsearch#24627


Original commit: elastic/x-pack-elasticsearch@4d1c745d74dfa77798c4af40a1a8e8411503d6e4

--- a/qa/smoke-test-security-with-mustache/src/test/resources/rest-api-spec/test/10_templated_role_query.yml
+++ b/qa/smoke-test-security-with-mustache/src/test/resources/rest-api-spec/test/10_templated_role_query.yml
@@ -111,7 +111,7 @@ setup:
                   "privileges": ["all"],
                   "query" : {
                     "template" : {
-                      "file" : "query"
+                      "id" : "query"
                     }
                   }
                 }
