--- a/qa/smoke-test-security-with-mustache/src/test/resources/rest-api-spec/test/11_templated_role_query_runas.yml
+++ b/qa/smoke-test-security-with-mustache/src/test/resources/rest-api-spec/test/11_templated_role_query_runas.yml
@@ -111,7 +111,7 @@ setup:
                   "privileges": ["all"],
                   "query" : {
                     "template" : {
-                      "file" : "query"
+                      "id" : "query"
                     }
                   }
                 }
