[TESTS] Fix filename pattern for templating in SSL smoke test
Relates to elastic/x-pack-elasticsearch@4c1d82c

Original commit: elastic/x-pack-elasticsearch@f5cbc1c6b3e106b649cee768960a01f227de5aa0

--- a/qa/smoke-test-plugins-ssl/build.gradle
+++ b/qa/smoke-test-plugins-ssl/build.gradle
@@ -237,7 +237,7 @@ ext.expansions = [
 
 processTestResources {
   from(sourceSets.test.resources.srcDirs) {
-    include '**/*.yaml'
+    include '**/*.yml'
     inputs.properties(expansions)
     MavenFilteringHack.filter(it, expansions)
   }
