Fix put script calls in script tests with watcher
Original commit: elastic/x-pack-elasticsearch@2eac2e519266c65759ca4e9617218f198140997e

--- a/qa/smoke-test-watcher-with-painless/src/test/resources/rest-api-spec/test/watcher_painless/50_update_scripts.yml
+++ b/qa/smoke-test-watcher-with-painless/src/test/resources/rest-api-spec/test/watcher_painless/50_update_scripts.yml
@@ -9,7 +9,7 @@
 
   - do:
       put_script:
-        lang: transform-script
+        id: transform-script
         body: >
           {
             "script":{
@@ -56,7 +56,7 @@
 
   - do:
       put_script:
-        lang: transform-script
+        id: transform-script
         body: >
           {
             "script":
@@ -84,7 +84,7 @@
 
   - do:
       put_script:
-        lang: condition-script
+        id: condition-script
         body: >
           {
             "script":
@@ -132,7 +132,7 @@
 
   - do:
       put_script:
-        lang: condition-script
+        id: condition-script
         body: >
           {
             "script": {
