Watcher: Return proper GetWatchResponse if watcher index is missing (elastic/x-pack-elasticsearch#1462)
This ensures that the same responses is returned, when a watch is
missing and when the whole watch index is missing for the
GetWatchResponse.

relates elastic/x-pack-elasticsearch#1409

Original commit: elastic/x-pack-elasticsearch@88a7335fa974b4be822c1d0fa1f25d996f42ce66

--- a/plugin/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/get_watch/20_missing.yml
@@ -1,5 +1,5 @@
 ---
-"Test get watch api with missing watch":
+"Test get watch api with missing watch on existing index":
   - do:
       cluster.health:
           wait_for_status: yellow
@@ -10,6 +10,24 @@
       indices.create:
         index: .watches
         ignore: 400
+
+  - do:
+      catch: missing
+      xpack.watcher.get_watch:
+        id: "missing_watch"
+  - match: { found : false}
+  - match: { _id: "missing_watch" }
+
+---
+"Test get watch api with missing watch on missing index":
+  - do:
+      cluster.health:
+          wait_for_status: yellow
+
+  - do:
+      indices.delete:
+        index: .watches*
+        ignore: 404
 
   - do:
       catch: missing
